fix: add resizeObserver to truncatedText

--- a/packages/ibm-products/src/components/TruncatedText/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/TruncatedText/_storybook-styles.scss
@@ -4,7 +4,11 @@
 // This source code is licensed under the Apache-2.0 license found in the
 // LICENSE file in the root directory of this source tree.
 //
+@use '@carbon/styles/scss/type';
+
 .truncated-text-stories__viewport {
+  @include type.type-style('body-01');
+
   inline-size: 100%;
   max-inline-size: 300px;
 }
